--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 opencv-contrib-python==3.4.2.17
 numpy==1.21.2
-tensorflow==2.2.0
+tensorflow
 imutils==0.5.4
 scikit-image==0.18.1
 scikit-learn==0.24.1
