--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 opencv-contrib-python>=4.2.0.32
-numpy==1.21.2
+numpy>=1.21.2
 tensorflow
-imutils==0.5.4
-scikit-image==0.18.1
-scikit-learn==0.24.1
+imutils>=0.5.4
+scikit-image>=0.18.1
+scikit-learn>=0.24.1
